Rewrite storages to use new merged exceptions